# napi-stdout

./: Cargo.toml  index.d.ts  index.js  package.json  test.js
npm/darwin-arm64/: README.md  package.json
src/: lib.rs
